contrast ratio correct #75

--- a/public/styles/stylesheet.css
+++ b/public/styles/stylesheet.css
@@ -91,8 +91,8 @@ a {
 
 .theme-blue {
     --accent-color: rgba(65, 111, 131, 0.5);
-    --button-color: var(--accent-color-one);
-    --button-hover: rgb(48, 106, 131);
+    --button-color: rgb(51 110 133);
+    --button-hover: rgb(36, 91, 115);
 }
 
 .theme-red {
@@ -103,8 +103,8 @@ a {
 
 .theme-green {
     --accent-color: rgba(110, 145, 88, 0.5);
-    --button-color: var(--accent-color-three);
-    --button-hover: rgb(80, 111, 60);
+    --button-color: rgb(80, 111, 60);
+    --button-hover: rgb(64, 88, 48);
 }
 
 .theme-pink {
